# flico

./: .env  .env.example  .gitignore  .gitmodules  README.md  migration_script.sh  pip-requirements.txt  pyproject.toml
API/: aggregate_metadata.py  basic_test.py  institutions.py  metadata.py
analysis/: connector.py  institutions.ipynb  photos_per_year.ipynb
analysis/leaflet/: data_processing.py  leaflet-map.js  leaflet.html
analysis/processing/: aggregate_metadata.py
deprecated/: alchemy_orm_test.py
deprecated/API/: basic_test.py  metadata.py
deprecated/analysis/: README.md  connector.py  photos_per_year march_17_do_not_modify.ipynb  photos_per_year_march_16_do_not_modify.ipynb  requirements.txt
leaflet/: app.py
src/core/: db.py  decorator.py  model.py  schema.py
src/crawler/: __init__.py  connector.py  db.py  examples.py  flickr.py  flickr_api.py  insert.py  institutions.py  main.py  public_photos.py  requirements.txt  test.py
src/postgresql/: 000_create database.sql  000_initial_database.sql  001_institution_license_and_photo.sql  002_roles_setup.sql  003_password_scram-sha-256.sql  connector.py  institutions.sql  roles.sql  tables.sql
src/server/: dash_components.py  dashboard.py  db.py  description.ipynb  granularity_shift.ipynb  histogram_sampler.py  main.py  plot.py  plots_bokeh.py  plots_plotly.py  svr_eval.ipynb
src/trainer/: __init__.py  benchmark.py  connector.py  data_processing.py  db.py  encoder.py  pipeline.py  regression.py  sampling.py  (+1 more)
test/: crawl_institutions.py  db_connection.py  isSerial.py  memoize.py  prediction.py
(+23 files in other folders)
